--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "dependencies": {
     "http": "^0.0.0",
     "socket.io": "^1.7.2",
-    "socket.io-client": "^1.7.2"
+    "socket.io-client": "^1.7.2",
+    "worker-loader": "^0.7.1"
   },
   "scripts": {
-      "dev": "nodejs ./src/server/app.js"
+    "dev": "nodejs ./src/server/app.js"
   }
 }
