--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "callstats.io",
+  "name": "callstats",
   "version": "0.0.1",
-  "description": "Test task for callstats.io",
+  "description": "Test task for callstats",
   "main": "index.js",
   "repository": "forrana/callstats-test-task.git",
   "author": "forrana <forrana@gmail.com>",
   "license": "MIT",
-  "dependencies": {
-    "http": "^0.0.0",
-    "socket.io": "^1.7.2",
-    "socket.io-client": "^1.7.2",
-    "worker-loader": "^0.7.1"
-  },
   "scripts": {
     "dev": "nodejs ./src/server/app.js"
+  },
+  "devDependencies": {
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "css-loader": "^0.26.1",
+    "style-loader": "^0.13.1",
+    "webpack": "2.2.0",
+    "worker-loader": "^0.7.1"
   }
 }
