--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "devDependencies": {
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
+    "babel-plugin-syntax-async-functions": "^6.13.0",
+    "babel-polyfill": "^6.22.0",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-es2015-webpack2": "^1.0.0",
+    "babel-preset-stage-3": "^6.22.0",
     "css-loader": "^0.26.1",
     "style-loader": "^0.13.1",
     "webpack": "2.2.0",
