--- a/package.json
+++ b/package.json
@@ -7,19 +7,46 @@
   "author": "forrana <forrana@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "nodejs ./src/server/app.js"
+    "test": "karma start karma.config.js"
   },
   "devDependencies": {
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
+    "babel-core": "^6.4.0",
+    "babel-eslint": "^4.1.6",
+    "babel-istanbul": "^0.6.0",
+    "babel-istanbul-loader": "0.0.1",
+    "babel-loader": "^6.2.1",
+    "babel-plugin-add-module-exports": "^0.1.2",
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-polyfill": "^6.22.0",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-babili": "^0.0.10",
+    "babel-preset-es2015": "^6.3.13",
     "babel-preset-es2015-webpack2": "^1.0.0",
     "babel-preset-stage-3": "^6.22.0",
     "css-loader": "^0.26.1",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^3.1.0",
+    "jasmine": "^2.5.3",
+    "jasmine-core": "^2.4.1",
+    "jsdoc-webpack-plugin": "^0.0.2",
+    "karma": "^0.13.19",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-cli": "^1.0.1",
+    "karma-coverage": "^0.5.3",
+    "karma-es5-shim": "^0.0.4",
+    "karma-es6-shim": "^1.0.0",
+    "karma-jasmine": "^0.3.6",
+    "karma-jasmine-web-worker": "^0.1.2",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-requirejs": "^1.1.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.7.0",
+    "loader-utils": "^0.2.12",
+    "rimraf": "^2.5.0",
     "style-loader": "^0.13.1",
-    "webpack": "2.2.0",
+    "webpack": "^1.12.11",
     "worker-loader": "^0.7.1"
+  },
+  "dependencies": {
+    "phantomjs": "^2.1.7"
   }
 }
