--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
     "loader-utils": "^0.2.12",
+    "phantomjs-prebuilt": "^2.1.14",
     "rimraf": "^2.5.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.11",
