--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-es2015-webpack2": "^1.0.0",
     "babel-preset-stage-3": "^6.22.0",
+    "coveralls": "^2.11.15",
     "css-loader": "^0.26.1",
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "^3.1.0",
@@ -32,6 +33,7 @@
     "karma-chrome-launcher": "^0.2.2",
     "karma-cli": "^1.0.1",
     "karma-coverage": "^0.5.3",
+    "karma-coveralls": "^1.1.2",
     "karma-es5-shim": "^0.0.4",
     "karma-es6-shim": "^1.0.0",
     "karma-jasmine": "^0.3.6",
@@ -39,8 +41,9 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
     "loader-utils": "^0.2.12",
-    "phantomjs-prebuilt": "^2.1.14",
+    "mocha-lcov-reporter": "^1.2.0",
     "phantomjs": "^2.1.7",
+    "phantomjs-prebuilt": "^2.1.14",
     "rimraf": "^2.5.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.11",
