Fix jsdoc comments according to recent documentation

--- a/jsdoc.conf
+++ b/jsdoc.conf
@@ -4,8 +4,16 @@
         "dictionaries": ["jsdoc","closure"]
     },
     "source": {
-        "includePattern": ".+\\.js(doc|x)?$",
-        "excludePattern": "(^|\\/|\\\\)_"
+        "exclude": [
+          ".git",
+          ".meteor",
+          "node_modules"
+        ],
+        "include": [
+            "src/client/modules/calculations",
+            "src/client/modules/lifeCycle"
+        ],
+        "includePattern": ".+\\.js(doc|x)?$"
     },
     "plugins": [],
     "templates": {
