--- a/package.json
+++ b/package.json
@@ -40,13 +40,14 @@
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
+    "karma-webpack_2": "^1.0.3",
     "loader-utils": "^0.2.12",
     "mocha-lcov-reporter": "^1.2.0",
     "phantomjs": "^2.1.7",
     "phantomjs-prebuilt": "^2.1.14",
     "rimraf": "^2.5.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.12.11",
+    "webpack": "^2.2",
     "worker-loader": "^0.7.1"
   }
 }
