--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "forrana <forrana@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "test": "karma start karma.config.js"
+    "test": "node_modules/karma/bin/karma start karma.config.js"
   },
   "devDependencies": {
     "babel-core": "^6.4.0",
@@ -36,6 +36,7 @@
     "karma-coveralls": "^1.1.2",
     "karma-es5-shim": "^0.0.4",
     "karma-es6-shim": "^1.0.0",
+    "karma-firefox-launcher": "^1.0.0",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
