--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ language: node_js
 node_js:
     - "6.9.4"
 sudo: false
+before_script:
+# Installing firefox browser
+   - apt-get install xvfb iceweasel unzip -yqq
+   - Xvfb :99 -ac &
+   - export DISPLAY=:99
+   - firefox -v
 script: node_modules/karma/bin/karma start karma.config.js --single-run
 before_install:
   - export CHROME_BIN=chromium-browser
