--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
   "author": "forrana <forrana@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "test": "node_modules/karma/bin/karma start karma.config.js"
+    "test": "node_modules/karma/bin/karma start karma.config.js",
+    "postinstall": "node nightwatch.conf.js",
+    "test_e2e": "./node_modules/.bin/nightwatch --env local"
+  },
+  "dependencies": {
+    "nightwatch": "^0.9.9",
+    "saucelabs": "^1.3.0",
+    "selenium-download": "^2.0.7"
   },
   "devDependencies": {
     "babel-core": "^6.4.0",
@@ -40,7 +47,6 @@
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.7.0",
     "karma-webpack_2": "^1.0.3",
     "loader-utils": "^0.2.12",
     "mocha-lcov-reporter": "^1.2.0",
@@ -49,6 +55,10 @@
     "rimraf": "^2.5.0",
     "style-loader": "^0.13.1",
     "webpack": "^2.2",
-    "worker-loader": "^0.7.1"
+    "worker-loader": "^0.7.1",
+    "aws-sdk": "^2.7.13",
+    "env2": "^2.1.1",
+    "mime-types": "^2.1.13",
+    "nodemon": "^1.11.0"
   }
 }
