--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "selenium-download": "^2.0.7"
   },
   "devDependencies": {
+    "aws-sdk": "^2.7.13",
     "babel": "^6.5.2",
     "babel-cli": "^6.22.2",
     "babel-core": "^6.4.0",
@@ -34,6 +35,7 @@
     "babel-preset-stage-3": "^6.22.0",
     "coveralls": "^2.11.15",
     "css-loader": "^0.26.1",
+    "env2": "^2.1.1",
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "^3.1.0",
     "jasmine": "^2.5.3",
@@ -50,18 +52,17 @@
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.1",
     "karma-webpack_2": "^1.0.3",
     "loader-utils": "^0.2.12",
+    "mime-types": "^2.1.13",
     "mocha-lcov-reporter": "^1.2.0",
+    "nodemon": "^1.11.0",
     "phantomjs": "^2.1.7",
     "phantomjs-prebuilt": "^2.1.14",
     "rimraf": "^2.5.0",
     "style-loader": "^0.13.1",
     "webpack": "^2.2",
-    "worker-loader": "^0.7.1",
-    "aws-sdk": "^2.7.13",
-    "env2": "^2.1.1",
-    "mime-types": "^2.1.13",
-    "nodemon": "^1.11.0"
+    "worker-loader": "^0.7.1"
   }
 }
